# Collision-Simulator

./: CMakeLists.txt  tools.py
src/: global.cpp  global.hpp  main.cpp
src/app/: app-global.cpp  app-global.hpp  application.cpp  application.hpp  event-handler.cpp  global.cpp  global.hpp
src/config/: config.hpp
src/config/SDL2/: config.cpp  config.hpp
src/config/SDL2/graphics/: Window.cpp  Window.hpp  text.cpp  text.hpp
src/core/geometric/: Line.cpp  Line.hpp  RGBAColor.hpp  Shape.cpp  Shape.hpp  basic.hpp  colliders.cpp  colliders.hpp
src/core/physics/: physics.cpp  physics.hpp
src/system/: event-handler.cpp  event-handler.hpp  global.cpp  global.hpp
src/utils/: camera.cpp  camera.hpp  mouse.hpp
src/utils/system/: keyboard.cpp  keyboard.hpp  mouse.hpp
src/utils/world/: camera.cpp  camera.hpp  mouse.hpp
